adicionando testes para o CRUD da fornada